# channels-easy

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  CNAME  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  search.html  sitemap.xml
.github/workflows/: python-package.yml  release.yaml
apis/: index.html
channels_easy/: generic.py  json.py
docs/: apis.md  index.md  requirements.txt
example/: pyproject.toml
example/channels_app/: apps.py  consumers.py  routing.py  views.py
example/channels_app/static/channels_app/: client.js
example/channels_app/templates/channels_app/: index.html
example/server/: asgi.py  settings.py  urls.py
search/: search_index.json
tests/: conftest.py  test_channels_easy.py
