[tool.poetry]
name = "channels-easy"
version = "0.2.2"
description = "A thin wrapper around channels consumer to make things EASY"
authors = ["Naman Tamrakar <namantam1@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/namantam1/channels-easy"
repository = "https://github.com/namantam1/channels-easy"
keywords = ["channels", "django", "websocket"]


[tool.poetry.dependencies]
python = ">=3.7,<4.0"
Django = ">=3.0"
channels = ">=3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.12b0"
pytest-django = "^4.5.2"
pytest-asyncio = "^0.16.0"
coverage = "^6.2"
pre-commit = "^2.16.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
mkdocs = "^1.2.3"
mkdocstrings = "^0.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''

[tool.isort]
profile = "black"
