[tool.poetry]
name = "channels-easy-example"
version = "0.1.0"
description = ""
authors = ["Naman Tamrakar <namantam1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
channels-easy = "^0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
